--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,16 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# IDEs and editors
+.idea
+.vscode
+*.sublime-workspace
+
+bin/
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
 # Go workspace file
 go.work
-go.work.sum
-
-# env file
 .env
