--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,36 +1,17 @@
-name: Go [lint, test]
+name: Lint & Test & Build & Release
 
 on:
-  workflow_dispatch:
   push:
+    tags:
+      - 'v*'
     branches:
-      - 'master'
-    paths:
-      - 'scripts/**'
-      - '**/*.go'
-      - 'go.mod'
-      - 'go.sum'
-      - 'Makefile'
-      - '!**.*md'
-      - '.github/workflows/**'
-  pull_request:
-    types: [ opened, synchronize, reopened ]
-    branches:
-      - '*'
-    paths:
-      - 'scripts/**'
-      - '**/*.go'
-      - 'go.mod'
-      - 'go.sum'
-      - 'Makefile'
-      - '!**.*md'
-      - '.github/workflows/**'
+      - "!*"
 
 jobs:
   build:
     strategy:
       fail-fast: false
-      max-parallel: 3
+      max-parallel: 2
       matrix:
         os: [ 'ubuntu-22.04' ]
         go: [ '1.21' ]
@@ -54,19 +35,8 @@ jobs:
       - name: Build
         run: |
           make build
-        shell: bash
 
-      - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v5
-        with:
-          install-only: true
-
-      - name: Check release config
-        run: |
-          make check-releaser
-        shell: bash
-
-  testing:
+  regression_test:
     strategy:
       fail-fast: false
       max-parallel: 2
@@ -74,7 +44,7 @@ jobs:
         os: [ 'ubuntu-22.04' ]
         go: [ '1.21' ]
     runs-on: ${{ matrix.os }}
-    name: Run Tests
+    name: Regression tests
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -90,9 +60,47 @@ jobs:
           go version
         shell: bash
 
-      - name: Test
+      - name: Run regression tests
         run: |
           make test
         shell: bash
 
+  release:
+    needs: [ build, regression_test ]
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        os: [ 'ubuntu-22.04' ]
+        go: [ '1.21' ]
+    runs-on: ${{ matrix.os }}
+    name: Release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
+      - name: Set up go
+        uses: actions/setup-go@v4.1.0
+        with:
+          go-version: ${{ matrix.go }}
+
+      - run: |
+          go version
+        shell: bash
+
+      - name: Install GoReleaser
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          distribution: goreleaser
+          version: v1.20.0
+          install-only: true
+
+      - name: Run GoReleaser
+        if: success()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          make release
+        shell: bash
