--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,10 +1,11 @@
 http:
   port: 8080
+log:
+  level: debug
+  format: text
 pack:
   boxes:
     - 1
     - 2
     - 4
     - 8
-    - 16
-    - 32
