refactor: Follow 12-factor app approach

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
     image: ${APP_NAME}:latest
     environment:
         PORT: 8080
-        SHIPPING_PACK_OPTIMIZER_CONFIG_PATH: ${SHIPPING_PACK_OPTIMIZER_CONFIG_PATH:-/configs/config.yaml}
+        SHIPPING_PACK_OPTIMIZER_CONFIG_PATH: ${SHIPPING_PACK_OPTIMIZER_CONFIG_PATH:-}
     ports:
       - 8080:8080
     volumes:
