--- a/.github/workflows/dockerfiles.yml
+++ b/.github/workflows/dockerfiles.yml
@@ -11,6 +11,7 @@ on:
     paths:
       - "!**"
       - "build/docker/**"
+      - "Dockerfile"
       - "!build/docker/**.sh"
       - ".github/workflows/dockerfiles.yml"
 
@@ -24,7 +25,7 @@ jobs:
           [
             "./Dockerfile",
           ]
-    runs-on: "ubuntu-22.04"
+    runs-on: "ubuntu-24.04"
     name: Lint ${{ matrix.dockerfile }}
     steps:
       - name: Checkout
@@ -40,7 +41,7 @@ jobs:
           error_level: 2
 
   build-targets:
-    runs-on: "ubuntu-22.04"
+    runs-on: "ubuntu-24.04"
     name: Build docker image
     steps:
       - name: Checkout
