ci: Bump go to 1.23; Bump ubuntu to 24.04

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,8 @@ jobs:
       fail-fast: false
       max-parallel: 2
       matrix:
-        os: [ 'ubuntu-22.04' ]
-        go: [ '1.21' ]
+        os: [ 'ubuntu-24.04' ]
+        go-version: [1.23.x]
     runs-on: ${{ matrix.os }}
     name: Build
     steps:
@@ -24,9 +24,9 @@ jobs:
           fetch-depth: 0
 
       - name: Set up go
-        uses: actions/setup-go@v4.1.0
+        uses: actions/setup-go@v5.2.0
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - run: |
           go version
@@ -41,8 +41,8 @@ jobs:
       fail-fast: false
       max-parallel: 2
       matrix:
-        os: [ 'ubuntu-22.04' ]
-        go: [ '1.21' ]
+        os: [ 'ubuntu-24.04' ]
+        go-version: [1.23.x]
     runs-on: ${{ matrix.os }}
     name: Regression tests
     steps:
@@ -52,9 +52,9 @@ jobs:
           fetch-depth: 0
 
       - name: Set up go
-        uses: actions/setup-go@v4.1.0
+        uses: actions/setup-go@v5.2.0
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - run: |
           go version
@@ -71,8 +71,8 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        os: [ 'ubuntu-22.04' ]
-        go: [ '1.21' ]
+        os: [ 'ubuntu-24.04' ]
+        go-version: [1.23.x]
     runs-on: ${{ matrix.os }}
     name: Release
     steps:
@@ -82,19 +82,19 @@ jobs:
           fetch-depth: 0
 
       - name: Set up go
-        uses: actions/setup-go@v4.1.0
+        uses: actions/setup-go@v5.2.0
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - run: |
           go version
         shell: bash
 
       - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: v1.20.0
+          version: ~> v2
           install-only: true
 
       - name: Run GoReleaser
