--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,8 +32,8 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        os: [ 'ubuntu-22.04' ]
-        go: [ '1.21' ]
+        os: [ 'ubuntu-24.04' ]
+        go-version: [1.23.x]
     runs-on: ${{ matrix.os }}
     name: Build
     steps:
@@ -43,9 +43,9 @@ jobs:
           fetch-depth: 0
 
       - name: Set up go
-        uses: actions/setup-go@v4.1.0
+        uses: actions/setup-go@v5.2.0
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - run: |
           go version
@@ -57,7 +57,7 @@ jobs:
         shell: bash
 
       - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
           install-only: true
 
@@ -71,8 +71,8 @@ jobs:
       fail-fast: false
       max-parallel: 2
       matrix:
-        os: [ 'ubuntu-22.04' ]
-        go: [ '1.21' ]
+        os: [ 'ubuntu-24.04' ]
+        go-version: [1.23.x]
     runs-on: ${{ matrix.os }}
     name: Run Tests
     steps:
@@ -82,9 +82,9 @@ jobs:
           fetch-depth: 0
 
       - name: Set up go
-        uses: actions/setup-go@v4.1.0
+        uses: actions/setup-go@v5.2.0
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - run: |
           go version
@@ -93,6 +93,43 @@ jobs:
       - name: Test
         run: |
           make test
+        shell: bash
+
+
+  check-releaser:
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        os: [ 'ubuntu-24.04' ]
+        go-version: [1.23.x]
+    runs-on: ${{ matrix.os }}
+    name: Check Releaser
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up go
+        uses: actions/setup-go@v5.2.0
+        with:
+          go-version: ${{ matrix.go-version }}
+
+      - run: |
+          go version
+        shell: bash
+
+      - name: Install GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          distribution: goreleaser
+          version: ~> v2
+          install-only: true
+
+      - name: Check release config
+        run: |
+          make check-releaser
         shell: bash
 
 
