chore: Add dist release artifacts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,12 @@
 *.sublime-workspace
 
 bin/
+dist/
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
 # Go workspace file
 go.work
+
 .env
