--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,5 @@
+version: 2
+
 release:
   github:
     owner: obalunenko
@@ -16,24 +18,24 @@ gomod:
     - CGO_ENABLED=0
   # Which Go binary to use.
   # Defaults to `go`.
+  mod: vendor
   gobinary: go
-
-before:
-  hooks:
-    - go mod verify
 
 builds:
   - id: service
     binary: server
     goos:
-      - linux
-      - darwin
-      - windows
+      - 'linux'
+      - 'darwin'
+      - 'windows'
     goarch:
-      - 386
-      - amd64
-      - arm
-      - arm64
+      - 'amd64'
+      - 'arm'
+      - 'arm64'
+    ignore:
+      - goos: darwin
+        goarch: 'arm'
+
     mod_timestamp: '{{ .CommitTimestamp }}'
     env:
       - CGO_ENABLED=0
@@ -54,7 +56,7 @@ universal_binaries:
     # You will want to change this if you have multiple builds!
     #
     # Defaults to '{{ .ProjectName }}'
-    name_template: 'server'
+    name_template: 'shipping-pack-optimizer'
 
     # Whether to remove the previous single-arch binaries from the artifact list.
     # If left as false, your end release might have both several macOS archives: amd64, arm64 and all.
@@ -66,11 +68,13 @@ archives:
   - id: service
     builds:
       - service
-    format: tar.gz
+    formats:
+      - tar.gz
     wrap_in_directory: true
     format_overrides:
       - goos: windows
-        format: zip
+        formats: 
+          - zip
     name_template: "{{ .Binary }}-{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     files:
       - LICENSE
@@ -79,7 +83,7 @@ checksum:
   name_template: "{{ .ProjectName }}-{{ .Version }}-checksums.txt"
 
 snapshot:
-  name_template: SNAPSHOT-{{ .Commit }}
+  version_template: SNAPSHOT-{{ .Commit }}
 
 changelog:
   sort: asc
