--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,7 @@
 services:
   server:
     image: ${APP_NAME}:latest
-    environment:
-        PORT: "8080"
-        HOST: "0.0.0.0"
-        PACK_BOXES: "1,2,4,8,16"
-        LOG_LEVEL: "DEBUG"
-        LOG_FORMAT: "text"
+    env_file:
+      - .env
     ports:
-      - 8080:8080
-    volumes:
-        - ./configs:/configs
-
+      - "8080:8080"
