--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,63 @@ jobs:
           make test
         shell: bash
 
+
+  bake-images:
+    name: Build and push
+    runs-on: 'ubuntu-24.04'
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: 'linux/arm64,linux/amd64'
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3.3.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5.6.1
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # Docker tags based on the following events/attributes
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=semver,pattern={{raw}}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
+
+      - name: Build and push Docker images
+        uses: docker/bake-action@v6.3.0
+        env:
+          TAGS: ${{ steps.meta.outputs.bake-file-tags }}
+          LABELS: ${{ steps.meta.outputs.bake-file-labels }}
+          ANNOTATIONS: ${{ steps.meta.outputs.bake-file-annotations }}
+        with:
+          files: |
+            ./docker-bake.hcl
+            cwd://${{ env.TAGS }}
+            cwd://${{ env.LABELS }}
+            cwd://${{ env.ANNOTATIONS }}
+          push: ${{ github.event_name != 'pull_request' }}
+          pull: true
+
   release:
     needs: [ build, regression_test ]
     strategy:
