--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,11 @@ services:
   server:
     image: ${IMAGE_NAME}:latest
     container_name: "server"
-    env_file:
-      - .env
+    environment:
+      PORT: 8080
+      HOST: 0.0.0.0
+      PACK: BOXES=1,2,4,8,16
+      LOG_LEVEL: DEBUG
+      LOG_FORMAT: text
     ports:
       - "8080:8080"
