--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,12 @@
 services:
   server:
-    image: ${APP_NAME}:latest
-    env_file:
-      - .env
+    image: ${IMAGE_NAME}:latest
+    container_name: "server"
+    environment:
+      PORT: 8080
+      HOST: 0.0.0.0
+      PACK: BOXES=1,2,4,8,16
+      LOG_LEVEL: DEBUG
+      LOG_FORMAT: text
     ports:
       - "8080:8080"
