--- a/.github/workflows/dockerfiles.yml
+++ b/.github/workflows/dockerfiles.yml
@@ -15,6 +15,10 @@ on:
       - "!build/docker/**.sh"
       - ".github/workflows/dockerfiles.yml"
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}-server
+
 jobs:
   lint-dockerfiles:
     strategy:
@@ -57,7 +61,40 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build
-        run: |
-          make docker-build
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3.3.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5.6.1
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # Docker tags based on the following events/attributes
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=semver,pattern={{raw}}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
+
+      - name: Build and push Docker images
+        uses: docker/bake-action@v6.3.0
+        env:
+          TAGS: ${{ steps.meta.outputs.bake-file-tags }}
+          LABELS: ${{ steps.meta.outputs.bake-file-labels }}
+          ANNOTATIONS: ${{ steps.meta.outputs.bake-file-annotations }}
+        with:
+          files: |
+            ./docker-bake.hcl
+            cwd://${{ env.TAGS }}
+            cwd://${{ env.LABELS }}
+            cwd://${{ env.ANNOTATIONS }}
+          push: ${{ github.event_name != 'pull_request' }}
+          pull: true
     
