--- a/deployments/compose/compose.yaml
+++ b/deployments/compose/compose.yaml
@@ -5,7 +5,7 @@ services:
     environment:
       PORT: 8080
       HOST: 0.0.0.0
-      PACK: BOXES=1,2,4,8,16
+      PACK_BOXES: 250,500,1000,2000,5000
       LOG_LEVEL: DEBUG
       LOG_FORMAT: text
     ports:
