--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}-server
   CI_COMMIT_TAG: ${{ github.ref_name }}
+  TEST_DISCARD_LOG: true
 
 jobs:
   build:
