--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}-server
+  CI_COMMIT_TAG: ${{ github.ref_name }}
+  CI_COMMIT_SHORT_SHA: ${{ github.sha }}
 
 jobs:
   build:
