--- a/.github/workflows/dockerfiles.yml
+++ b/.github/workflows/dockerfiles.yml
@@ -15,6 +15,10 @@ on:
       - "!build/docker/**.sh"
       - ".github/workflows/dockerfiles.yml"
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}-server
+
 jobs:
   lint-dockerfiles:
     strategy:
@@ -42,6 +46,7 @@ jobs:
 
   build-targets:
     runs-on: "ubuntu-24.04"
+    needs: [ lint-dockerfiles ]
     name: Build docker image
     steps:
       - name: Checkout
@@ -57,6 +62,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3.3.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          logout: true
+
       - name: Build
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
           make docker-build
+
+      - name: Build and Push
+        if: ${{ github.event_name != 'pull_request' }}
+        run: |
+          make docker-build-push  
